--- a/css/chatbot.css
+++ b/css/chatbot.css
@@ -192,6 +192,7 @@
     color: white;
     align-self: flex-end;
     border-bottom-right-radius: 5px;
+    margin-left: auto;
 }
 
 .message.bot {
@@ -199,6 +200,7 @@
     color: #2c3e50;
     align-self: flex-start;
     border-bottom-left-radius: 5px;
+    margin-right: auto;
 }
 
 /* Typing Indicator */
